<resources>
    <string name="app_name">NPI_app</string>
    <string name="title_activity_localizacion" translatable="false">Localizacion</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="menu_item_1">Comprobación de aulas</string>
    <string name="menu_item_2" translatable="false">Menu 2</string>
    <string name="language">Idioma</string>
    <string name="title_activity_nfcactivity">Comprobación de aulas</string>
    <string name="please_scan">Escanea la tarjeta del aula que quieres consultar.</string>
    <string name="classroom_info_placeholder" translatable="false">Estás en el aula 3.1. Ahora mismo en este aula hay clase de Estructuras de Datos. La próxima clase es de Visión por Computador, y empieza a las 13:30. Tú no tienes clase en este aula. Ahora mismo tienes Nuevos Paradigmas de Interacción en el aula 2.2, y a las 13:30 tienes Aprendizaje Automático en el aula 2.4</string>
    <string name="classroom_info_room">Estás en el aula &lt;b>%1$s&lt;/b>.</string>
    <string name="classroom_info_curr_subject">Ahora mismo en este aula tiene lugar la clase de &lt;b>%1$s&lt;/b>, del grupo &lt;b>%2$s&lt;/b>.</string>
    <string name="classroom_info_next_subject">La próxima clase es de &lt;b>%1$s&lt;/b>, del grupo &lt;b>%2$s&lt;/b>, que empieza a las &lt;b>%3$s&lt;/b>.</string>
    <string name="classroom_info_this_room_yes">Tienes clase en este aula ahora.</string>
    <string name="classroom_info_this_room_no">No tienes clase en este aula ahora.</string>
    <string name="classroom_info_my_curr_subject">Ahora mismo tienes clase en el aula &lt;b>%1$s&lt;/b> de &lt;b>%2$s&lt;/b>.</string>
    <string name="classroom_info_my_curr_subject_no">No tienes ninguna clase en este momento.</string>
    <string name="classroom_info_my_next_subject">Después tienes clase de &lt;b>%1$s&lt;/b> en el aula &lt;b>%2$s&lt;/b> a las &lt;b>%3$s&lt;/b>.</string>
    <string name="classroom_info_my_next_subject_no">No tienes más clases hoy.</string>
    <string name="classroom_info_curr_no_subject">No hay clases en este aula ahora mismo.</string>
    <string name="classroom_info_next_no_subject">No hay más clases programadas para hoy en este aula.</string>

    <string name="classroom_short_room">&lt;b>Aula: %1$s&lt;/b></string>
    <string name="classroom_short_curr_subject">&lt;b>Asignatura actual:&lt;/b> %1$s (Grupo %2$s)</string>
    <string name="classroom_short_next_subject">&lt;b>Próxima asignatura:&lt;/b> %1$s (Grupo %2$s) a las %3$s</string>
    <string name="classroom_short_my_curr_subject">&lt;b>Tu clase actual:&lt;/b> %1$s (Grupo %2$s) en %3$s</string>
    <string name="classroom_short_my_next_subject">&lt;b>Tu próxima clase:&lt;/b> %1$s (Grupo %2$s) a las %3$s en %4$s</string>

    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="title_activity_wallet" translatable="false">WalletActivity</string>
    <string name="title_activity_wallet_entry" translatable="false">WalletEntryActivity</string>
    <string name="scan_qr_desc">Escanear QR de pago</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="redeem_points_desc">Canjear puntos</string>
    <string name="redeem">Canjear\npuntos</string>
    <string name="payments_desc">Historial de pagos</string>
    <string name="history">Historial\nde pagos</string>
    <string name="vouchers_desc">Mis Bonos</string>
    <string name="vouchers">Mis Bonos</string>
    <string name="title_activity_qrscanner" translatable="false">QRScannerActivity</string>
    <string name="saldo_txt">SALDO: %.2f €</string>
    <string name="puntos_txt">PUNTOS: %1$d</string>
    <string name="title_activity_payment" translatable="false">PaymentActivity</string>
    <string name="concept_label">Concepto: %1$s</string>
    <string name="key_value_format" translatable="false">%1$s: %2$s</string>
    <string name="price_label">Precio</string>
    <string name="date_label">Fecha</string>
    <string name="sport_label">Deporte</string>
    <string name="place_label">Lugar</string>
    <string name="court_label">Pista</string>
    <string name="start_time_label">Hora de inicio</string>
    <string name="end_time_label">Hora de fin</string>
    <string name="degree_label">Grado</string>
    <string name="course_label">Curso</string>
    <string name="pay_button_text">PAGAR (%.2f €)</string>
    <string name="alert_title_insufficient_balance">Sin saldo suficiente</string>
    <string name="alert_message_insufficient_balance">No hay suficiente saldo en tu monedero virtual. Recarga tu monedero antes.</string>
    <string name="ok_button">Aceptar</string>
    <string name="alert_title_confirm_payment">Confirmar pago</string>
    <string name="alert_message_confirm_payment">Se va a proceder a realizar el pago de %.2f €. ¿Quieres continuar?</string>
    <string name="yes_button">Sí</string>
    <string name="payment_successful_message">Se ha efectuado el pago.</string>
    <string name="no_button">No</string>
    <string name="title_activity_payment_confirmation" translatable="false">PaymentConfirmationActivity</string>
    <string name="points_message">¡Has ganado %1$d puntos de fidelidad!</string>
    <string name="item_cost">Puntos: %1$d</string>
    <string name="title_activity_redeem_points" translatable="false">RedeemPointsActivity</string>
    <string name="title_activity_redeem_details" translatable="false">RedeemDetailsActivity</string>
    <string name="redeem_button_text">CANJEAR (%1$d)</string>
    <string name="discount_redeemed">¡Se ha completado el canjeo! Consulta el descuento que has adquirido cuando vayas a pagar, utilizando el botón CANJEAR DESCUENTOS.</string>
    <string name="product_redeemed">¡El pedido ha sido completado! Consulta tu e-mail para ver la información del pedido.</string>
    <string name="redeem_completed">¡Canjeo completado!</string>
    <string name="title_activity_redeem_confirmation" translatable="false">RedeemConfirmationActivity</string>
    <string name="title_activity_apply_discounts" translatable="false">ApplyDiscountsActivity</string>
    <string name="original_price">Precio Original: %.2f €</string>
    <string name="discount_applied">Descuento aplicado: %.2f €</string>
    <string name="final_price">Precio final: %.2f €</string>
    <string name="confirm_redeem_message">Vas a proceder a gastar %1$d puntos de fidelidad en este producto. ¿Quieres continuar?</string>
    <string name="confirm_redeem_title">Confirmar canjeo</string>
    <string name="discount_price" translatable="false">%.2f €</string>
    <string name="title_activity_my_payments" translatable="false">MyPaymentsActivity</string>
    <string name="transaction_concept">Concepto: %1$s</string>
    <string name="transaction_money">Pago con monedero virtual</string>
    <string name="transaction_points">Canjeo de puntos</string>
    <string name="transaction_method">Transacción: %1$s</string>
    <string name="transaction_quantity_money">Cantidad: %.2f €</string>
    <string name="transaction_quantity_points">Cantidad: %1$d puntos</string>
    <string name="transaction_date">Fecha: %1$s</string>
    <string name="title_activity_my_vouchers" translatable="false">MyVouchersActivity</string>
    <string name="title_activity_voucher_details" translatable="false">VoucherDetailsActivity</string>
    <string name="voucher_details_sports">Lugar: %1$s\nHora: %2$s - %3$s\nPista: %4$s</string>

    <string name="menu">Menú Principal</string>
    <string name="docencia">Docencia</string>
    <string name="localizacion">Localización</string>
    <string name="tramites">Trámites</string>
    <string name="pagos">Mis Pagos</string>
    <string name="comedor">Comedor</string>
    <string name="profesorado">Profesorado</string>
    <string name="servicios_ext">Servicios\nExternos</string>
    <string name="espacios_com">Espacios\nComunes</string>
    <string name="chatbot">OyeETSIIT</string>

    <string name="ajustes">Ajustes</string>
    <string name="cambio_idioma">Cambio de idioma</string>
    <string name="ingles">Inglés</string>
    <string name="espanol">Español</string>
    <string name="aleman">Alemán</string>

    <string name="horario">Consulta de\nHorarios</string>
    <string name="c_acad">Calendario\nAcadémico</string>
    <string name="c_exam">Calendario\nde Exámenes</string>

    <string name="informatica">Ingeniería Informática</string>
    <string name="teleco">Telecomunicaciones</string>
    <string name="iim">Ingeniería Informática\ny Matemáticas</string>
    <string name="iiade">Ingeniería Informática\ny ADE</string>
    <string name="dgiim" translatable="false">DGIIM</string>
    <string name="dgiiade" translatable="false">DGIIADE</string>

    <string name="docente">Docente</string>
    <string name="departamento">Departamento</string>
    <string name="tutorias1">Tutorías\nprimer semestre</string>
    <string name="tutorias2">Tutorías\nsegundo semestre</string>

</resources>