<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titulo_pagos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00E4DF"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- Título centrado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagos"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Indicador de Saldo -->
    <TextView
        android:id="@+id/tvSaldo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="SALDO: 0.00"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_pagos"/>

    <!-- Indicador de Puntos -->
    <TextView
        android:id="@+id/tvPuntos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="PUNTOS: 0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSaldo" />

    <!-- Contenedor para las opciones del menú -->
    <GridLayout
        android:id="@+id/menu_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvPuntos"
        app:layout_constraintBottom_toTopOf="@id/down_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="32dp"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <!-- Opciones del menú como LinearLayouts dentro del GridLayout -->

        <!-- QR -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btnScanQR"
                android:src="@drawable/ic_qr"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/scan_qr_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/scan_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- CANJEAR PUNTOS -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btnRedeemPoints"
                android:src="@drawable/ic_puntos"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/redeem_points_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/redeem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- HISTORIAL DE PAGOS -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/btnPayments"
                android:src="@drawable/ic_factura"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/payments_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- BONOS -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/btnBonuses"
                android:src="@drawable/ic_bono"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/vouchers_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/vouchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </GridLayout>


    <!-- Reutilización de la Toolbar inferior -->
    <include
        android:id="@+id/down_toolbar"
        layout="@layout/down_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
