<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titulo_docencia"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00E4DF"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- Título centrado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docencia"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <!-- Contenedor para las opciones del menú -->
    <GridLayout
        android:id="@+id/menu_grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="3"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/titulo_docencia"
        app:layout_constraintBottom_toTopOf="@id/down_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <!-- Opciones del menú como LinearLayouts dentro del GridLayout -->

        <!-- HORARIOS -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btn_horario"
                android:src="@drawable/ic_horario"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/horario"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- CALENDARIO ACADÉMICO -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="32dp">

            <ImageButton
                android:id="@+id/btn_calendario"
                android:src="@drawable/ic_calendario"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/c_acad"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/c_acad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- CALENDARIO DE EXÁMENES -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp">

            <ImageButton
                android:id="@+id/btn_examenes"
                android:src="@drawable/ic_examen"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/c_exam"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/c_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </GridLayout>

    <!-- Reutilización de la Toolbar inferior -->
    <include
        android:id="@+id/down_toolbar"
        layout="@layout/down_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
